--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,12 +42,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # If you have any requirements
+      - name: Get Project names and modify them
+        env:
+            SOURCE_PROJECT_INPUT: ${{ github.event.inputs.source-project }}
+            TARGET_PROJECT_INPUT: ${{ github.event.inputs.target-project }}
+        run: |
+            SOURCE_PROJECT: $(echo "env.SOURCE_PROJECT_INPUT" | tr 'a-z' 'A-Z')
+            TARGET_PROJECT: $(echo "env.TARGET_PROJECT_INPUT" | tr 'a-z' 'A-Z')
       
       - name: Run Python Script
         working-directory: .
         env:
+          PYTHONUNBUFFERED: "1"
           SOURCE_PROJECT: ${{ github.event.inputs.source-project }}
           TARGET_PROJECT: ${{ github.event.inputs.target-project }}
           SOURCE_SECRET: ${{ secrets.SOURCE_PROJECT }}
           TARGET_SECRET: ${{ secrets.TARGET_SECRET }}
-        run: python main.py SOURCE_PROJECT SOURCE_SECRET TARGET_PROJECT TARGET_SECRET
+        run: python -u main.py SOURCE_PROJECT SOURCE_SECRET TARGET_PROJECT TARGET_SECRET
