--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,13 +43,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # If you have any requirements
       - name: Get Project names and modify them
-        env:
-            SOURCE_PROJECT_INPUT: ${{ github.event.inputs.source-project }}
-            TARGET_PROJECT_INPUT: ${{ github.event.inputs.target-project }}
-            SOURCE_PROJECT: $(echo "env.SOURCE_PROJECT_INPUT" | tr 'a-z' 'A-Z')
-            TARGET_PROJECT: $(echo "env.TARGET_PROJECT_INPUT" | tr 'a-z' 'A-Z')
         run: |
-            echo $SOURCE_PROJECT $TARGET_PROJECT  
+            SOURCE_PROJECT_INPUT= "${{ github.event.inputs.source-project }}"
+            TARGET_PROJECT_INPUT= "${{ github.event.inputs.target-project }}"
+            SOURCE_PROJECT=$(echo "$SOURCE_PROJECT_INPUT" | tr 'a-z' 'A-Z')
+            TARGET_PROJECT=$(echo "$TARGET_PROJECT_INPUT" | tr 'a-z' 'A-Z')
+            echo "Upper case source project : $SOURCE_PROJECT"
+            echo "Upper case target project : $TARGET_PROJECT"
       - name: Run Python Script
         working-directory: .
         env:
