--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,8 +44,8 @@ jobs:
           pip install -r requirements.txt  # If you have any requirements
       - name: Get Project names and modify them
         run: |
-            SOURCE_PROJECT_INPUT= "${{ github.event.inputs.source-project }}"
-            TARGET_PROJECT_INPUT= "${{ github.event.inputs.target-project }}"
+            SOURCE_PROJECT_INPUT=${{ github.event.inputs.source-project }}
+            TARGET_PROJECT_INPUT=${{ github.event.inputs.target-project }}
             
             echo "Upper case source project : $SOURCE_PROJECT_INPUT"
             echo "Upper case target project : $TARGET_PROJECT_INPUT"
