--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,9 @@ jobs:
             TARGET_PROJECT=$(echo "${{ github.event.inputs.target-project }}" | tr 'a-z' 'A-Z' | tr '-' '_')
             echo "SOURCE_PROJECT=$SOURCE_PROJECT" >> $GITHUB_ENV
             echo "TARGET_PROJECT=$TARGET_PROJECT" >> $GITHUB_ENV
+    outputs:
+        SOURCE_SECRET_NAME: ${{ join(SOURCE_PROJECT, '_SA_SECRET') }}
+        TARGET_SECRET_NAME: ${{ join(TARGET_PROJECT, '_SA_SECRET') }}
   access-secrets:  
     name: Run Python Script
     runs-on: ubuntu-latest
@@ -55,8 +58,7 @@ jobs:
     steps:
         - name: Get Secret
           run: |
-            SOURCE_SECRET_NAME="${SOURCE_PROJECT}_SA_SECRET"
-            TARGET_SECRET_NAME="${TARGET_PROJECT}_SA_SECRET"
-            SOURCE_SECRET="${{secrets.SOURCE_SECRET_NAME}}"
+            SOURCE_SECRET_KEY=${{ needs.run-script.outputs.SOURCE_SECRET_NAME }}
+            TARGET_SECRET_KEY=${{ needs.run-script.outputs.TARGET_SECRET_NAME }}
             echo $SOURCE_SECRET_NAME $TARGET_SECRET_NAME
             python -u main.py ${{env.SOURCE_PROJECT}} ${{env.SOURCE_SECRET}} ${{env.TARGET_PROJECT}} ${{env.TARGET_SECRET}}
