--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,8 +49,8 @@ jobs:
             echo "SOURCE_PROJECT=$SOURCE_PROJECT" >> $GITHUB_ENV
             echo "TARGET_PROJECT=$TARGET_PROJECT" >> $GITHUB_ENV
     outputs:
-        SOURCE_SECRET_NAME: ${{ join($SOURCE_PROJECT, '_SA_SECRET') }}
-        TARGET_SECRET_NAME: ${{ join($TARGET_PROJECT, '_SA_SECRET') }}
+        SOURCE_SECRET_NAME: ${{ join(SOURCE_PROJECT, '_SA_SECRET') }}
+        TARGET_SECRET_NAME: ${{ join(TARGET_PROJECT, '_SA_SECRET') }}
   access-secrets:  
     name: Run Python Script
     runs-on: ubuntu-latest
