--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,14 +43,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # If you have any requirements
       - name: Get Project names and modify them
+        id: get_project_names
         run: |
             SOURCE_PROJECT=$(echo "${{ github.event.inputs.source-project }}" | tr 'a-z' 'A-Z' | tr '-' '_') 
             TARGET_PROJECT=$(echo "${{ github.event.inputs.target-project }}" | tr 'a-z' 'A-Z' | tr '-' '_')
-            echo "SOURCE_PROJECT=$SOURCE_PROJECT" >> $GITHUB_ENV
-            echo "TARGET_PROJECT=$TARGET_PROJECT" >> $GITHUB_ENV
+            echo "SOURCE_PROJECT=$SOURCE_PROJECT" 
+            echo "TARGET_PROJECT=$TARGET_PROJECT"
     outputs:
-        SOURCE_SECRET_NAME: ${{ join(SOURCE_PROJECT, '_SA_SECRET') }}
-        TARGET_SECRET_NAME: ${{ join(TARGET_PROJECT, '_SA_SECRET') }}
+        SOURCE_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
+        TARGET_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
   access-secrets:  
     name: Run Python Script
     runs-on: ubuntu-latest
@@ -59,7 +60,7 @@ jobs:
     steps:
         - name: Get Secret
           run: |
-            SOURCE_SECRET_KEY=${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}
-            TARGET_SECRET_KEY=${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}
+            SOURCE_SECRET_KEY="${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}_SA_SECRET"
+            TARGET_SECRET_KEY="${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}_SA_SECRET"
             echo SOURCE_SECRET_KEY TARGET_SECRET_KEY
             python -u main.py ${{env.SOURCE_PROJECT}} ${{env.SOURCE_SECRET}} ${{env.TARGET_PROJECT}} ${{env.TARGET_SECRET}}
