--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,6 +28,9 @@ jobs:
   convert_project_names:
     name: Get SA Secrets for the projects
     runs-on: ubuntu-latest
+    outputs:
+        SOURCE_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
+        TARGET_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -49,17 +52,19 @@ jobs:
             TARGET_PROJECT=$(echo "${{ github.event.inputs.target-project }}" | tr 'a-z' 'A-Z' | tr '-' '_')
             echo "SOURCE_PROJECT=$SOURCE_PROJECT" 
             echo "TARGET_PROJECT=$TARGET_PROJECT"
-    outputs:
-        SOURCE_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
-        TARGET_SECRET_NAME: ${{ steps.get_project_names.outputs.SOURCE_PROJECT }}
+    
   access-secrets:  
     name: Run Python Script
     runs-on: ubuntu-latest
     needs: convert_project_names
     environment: staging
     steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+          
         - name: Get Secret
           run: |
+            echo "${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}"
             SOURCE_SECRET_KEY="${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}_SA_SECRET"
             TARGET_SECRET_KEY="${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}_SA_SECRET"
             echo SOURCE_SECRET_KEY TARGET_SECRET_KEY
