--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,10 +64,10 @@ jobs:
           
         - name: Get Secret
           run: |
-            echo "${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}"
             SOURCE_SECRET_KEY="${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}_SA_SECRET"
             TARGET_SECRET_KEY="${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}_SA_SECRET"
-            echo $SOURCE_SECRET_KEY
-            echo ${{secrets.SOURCE_SECRET_KEY}}
-            echo ${{secrets.TARGET_SECRET_KEY}}
+            SOURCE_SECRET="${{ secrets[SOURCE_SECRET_KEY] }}"
+            TARGET_SECRET="${{ secrets[TARGET_SECRET_KEY] }}"
+            echo "SOURCE_SECRET=${SOURCE_SECRET}"
+            echo "TARGET_SECRET=${TARGET_SECRET}"
             python -u main.py ${{env.SOURCE_PROJECT}} ${{env.SOURCE_SECRET}} ${{env.TARGET_PROJECT}} ${{env.TARGET_SECRET}}
