--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,13 +61,25 @@ jobs:
     steps:
         - name: Checkout code
           uses: actions/checkout@v2
-          
-        - name: Get Secret
+
+        - name: Set up environment variables for secrets
+          id: set_env
           run: |
-            SOURCE_SECRET_KEY="${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}_SA_SECRET"
-            TARGET_SECRET_KEY="${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}_SA_SECRET"
-            SOURCE_SECRET="${{ secrets[SOURCE_SECRET_KEY] }}"
-            TARGET_SECRET="${{ secrets[TARGET_SECRET_KEY] }}"
+            echo "SOURCE_SECRET_KEY=${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}_SA_SECRET" >> $GITHUB_ENV
+            echo "TARGET_SECRET_KEY=${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}_SA_SECRET" >> $GITHUB_ENV
+          
+        - name: Retrieve and use Secret Key
+          run: |
+            # Access the secrets using environment variables
+            SOURCE_SECRET_KEY=${{ env.SOURCE_SECRET_KEY }}
+            TARGET_SECRET_KEY=${{ env.TARGET_SECRET_KEY }}
+
+            
+            # Use the secrets
+            SOURCE_SECRET=${{ secrets[$SOURCE_SECRET_KEY] }}
+            TARGET_SECRET=${{ secrets[$TARGET_SECRET_KEY] }}
+            echo "SOURCE_SECRET_KEY=${SOURCE_SECRET_KEY}"
+            echo "TARGET_SECRET_KEY=${TARGET_SECRET_KEY}"
             echo "SOURCE_SECRET=${SOURCE_SECRET}"
             echo "TARGET_SECRET=${TARGET_SECRET}"
             python -u main.py ${{env.SOURCE_PROJECT}} ${{env.SOURCE_SECRET}} ${{env.TARGET_PROJECT}} ${{env.TARGET_SECRET}}
