--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,6 @@ on:
             - 'tst-aaa-blk-dev-ini2-01'
             - 'tst-aaa-blk-qa-ini2-01'
 
-
         target-project:
           description: 'Select Target Project'
           required: true
@@ -35,7 +34,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
@@ -44,7 +42,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # If you have any requirements
+          pip install -r requirements.txt 
+          
       - name: Get Project names and modify them
         id: get_project_names
         run: |
@@ -77,7 +76,7 @@ jobs:
             
             # Use the secrets
             SOURCE_SECRET=${{ secrets.SOURCE_SECRET_KEY }}
-            TARGET_SECRET=${{ secrets.TARGET_SECRET_KEY }}
+            TARGET_SECRET=${{ secrets.TST_AAA_BLK_DEV_INI2_01_SA_SECRET }}
             echo "SOURCE_SECRET_KEY=${SOURCE_SECRET_KEY}"
             echo "TARGET_SECRET_KEY=${TARGET_SECRET_KEY}"
             echo "SOURCE_SECRET=${SOURCE_SECRET}"
