--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,7 +56,8 @@ jobs:
             TARGET_PROJECT=$(echo "$TARGET_PROJECT_INPUT" | tr 'a-z' 'A-Z' | tr '-' '_')
             SOURCE_SECRET_NAME=${SOURCE_PROJECT_RAW}_SA_SECRET
             TARGET_SECRET_NAME=${TARGET_PROJECT_RAW}_SA_SECRET
-        
+
+            echo $SOURCE_PROJECT_INPUT, $TARGET_PROJECT_INPUT, $SOURCE_SECRET_NAME, $TARGET_SECRET_NAME
             echo "::set-output name=SOURCE_PROJECT_INPUT::$SOURCE_PROJECT_INPUT"
             echo "::set-output name=TARGET_PROJECT_INPUT::$TARGET_PROJECT_INPUT"
             echo "::set-output name=SOURCE_SECRET_NAME::$SOURCE_SECRET_NAME"
