--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,8 +56,7 @@ jobs:
             TARGET_PROJECT=$(echo "$TARGET_PROJECT_INPUT" | tr 'a-z' 'A-Z' | tr '-' '_')
             SOURCE_SECRET_NAME=${SOURCE_PROJECT}_SA_SECRET
             TARGET_SECRET_NAME=${TARGET_PROJECT}_SA_SECRET
-
-            echo $SOURCE_PROJECT_INPUT, $TARGET_PROJECT_INPUT, $SOURCE_SECRET_NAME, $TARGET_SECRET_NAME
+            
             echo "::set-output name=SOURCE_PROJECT_INPUT::$SOURCE_PROJECT_INPUT"
             echo "::set-output name=TARGET_PROJECT_INPUT::$TARGET_PROJECT_INPUT"
             echo "::set-output name=SOURCE_SECRET_NAME::$SOURCE_SECRET_NAME"
@@ -72,19 +71,20 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v2
 
+        - name: Set up environment variables for secrets
+          id: set_env
+          run: |
+            echo "SOURCE_SECRET_NAME=${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}" >> $GITHUB_ENV
+            echo "TARGET_SECRET_NAME=${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}" >> $GITHUB_ENV
+            echo "SOURCE_PROJECT_INPUT=${{ needs.convert_project_names.outputs.SOURCE_PROJECT_INPUT }}" >> $GITHUB_ENV
+            echo "TARGET_PROJECT_INPUT=${{ needs.convert_project_names.outputs.TARGET_PROJECT_INPUT }}" >> $GITHUB_ENV
+
         
         - name: Retrieve and use Secret Key
-          env:
-              SOURCE_PROJECT: ${{needs.convert_project_names.outputs.SOURCE_PROJECT_INPUT}}
-              TARGET_PROJECT: ${{ needs.convert_project_names.outputs.TARGET_PROJECT_INPUT}}
-              SOURCE_SECRET_NAME: ${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME}}
-              TARGET_SECRET_NAME: ${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}
-              
-          
           run: |
             # Access the secrets using environment variables
-            
-            # Use the secrets
+            SOURCE_PROJECT=${{env.SOURCE_PROJECT_INPUT}}
+            TARGET_PROJECT=${env.TARGET_PROJECT_INPUT}
             SOURCE_SECRET=${{ secrets[env.SOURCE_SECRET_NAME] }}
             TARGET_SECRET=${{ secrets[env.TARGET_SECRET_NAME] }}
             python -u main.py $SOURCE_PROJECT $SOURCE_SECRET $TARGET_PROJECT $TARGET_SECRET
